reenoforced security againt brute force attacks

--- a/mfa_demo/accounts/templates/accounts/home.html
+++ b/mfa_demo/accounts/templates/accounts/home.html
@@ -1,11 +1,11 @@
-
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MFA Demo</title>
-    <link rel="stylesheet" href="/mfa_demo/accounts/static/accounts/css/auth.css">
+    <link rel="stylesheet" href="{% static 'accounts/auth.css' %}">
 </head>
 <body>
     <div class="auth-container">
